--- a/src/app.css
+++ b/src/app.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #117bb7;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+    color: #117bb7aa;
 }
 
 body {
@@ -47,6 +47,14 @@ h1 {
   text-align: center;
 }
 
+button, option, select, td, input {
+  background-color: #1a1a1a;
+}
+
+th {
+  background-color: #117bb7;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -54,27 +62,50 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #117bb7;
 }
-button:focus,
-button:focus-visible {
+
+button:focus, button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+td, th {
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+}
+
+.imdb-logo {
+  height: 32px;
+}
+
+.x {
+  border-radius: 3px;
+  border: 1px solid transparent;
+  padding: 0.3em 0.6em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ff5248;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
 @media (prefers-color-scheme: light) {
+
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #e6e6e6;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  button, option, select, td, input {
+    background-color: #b4b4b4;
   }
 }
